[package]
name = "clinews"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
dotenv = "0.15.0"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
ureq = "2.3.1"

[features]
