[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
serde = { version = "1.0.131", features = ["derive"] }
serde_json = "1.0.72"
thiserror = "1.0.30"
ureq = "2.3.1"
